Optimize queries and improve service layer architecture
- Add JOIN FETCH queries to prevent N+1 problems in repositories
- Refactor services to use service-to-service calls instead of cross-repository access
- Eliminate code duplication across services
- Improve separation of concerns and maintainability

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>